# F1-WHO-IS-BETTER-DRIVER-

./: .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  app.py  environment.yml  main.py  pyproject.toml  requirements.txt  setup.py  start.sh  start_web.bat  start_web.sh  test_manual.py
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
examples/: README.md  basic_usage.py  cli_examples.bat  cli_examples.sh
outputs/data/: hamilton_monaco_q.csv  verstappen_monaco_q.csv
outputs/web/: bot_20251224_230538.csv
src/: __init__.py  app.py  app_test.py  data_acquisition.py  main.py  performance_metrics.py  visualization.py
static/css/: style.css
templates/: base.html  error.html  index.html
tests/: mock_f1session.py  sample_telemetry.csv  test_api.py  test_data_acquisition.py  test_manual.py  test_performance_metrics.py  test_visualization.py
